[package]
name = "pskey"
version = "0.1.0"
description = "Tiny transparent Tauri widget password manager (libsodium, Argon2id, challenge-response PIN)"
authors = ["Fanaperana <31814043+Fanaperana@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Fanaperana/pskey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pskey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
dryoc = { version = "0.6", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
parking_lot = "0.12"
rand = "0.8"

